# tama

./: CMakeLists.txt  README.md  tamagotchi_tui.cpp
